@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages.
 
-Changelog for smp_utils-0.98 [20130919] [svn:r133]
+Changelog for smp_utils-0.98 [20130925] [svn:r134]
   - smp_discover, smp_discover_list: in 1 line summary use
     "U" instead of "T" (routing attribute) if "table to
     table supported" set in report general response
@@ -14,6 +14,7 @@ Changelog for smp_utils-0.98 [20130919] [svn:r133]
   - smp_rep_broadcast: add broadcast type names
   - smp_general: add initiates ssp close and ssp maximum
     connect time limit fields (spl3r04)
+  - add support for mpt3ctl (Linux LSI 12 Gbps HBAs)
   - change binary install from /usr/sbin to /usr/bin since
     sbin caused problems
   - examples folder script cleanup
